Fix form submit
Form submit broken on deployed, revert to working code

--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@
   text-decoration: none;
   font-size: 3rem;
   height: 3rem;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   text-decoration: none;
 }
 
@@ -38,7 +38,7 @@
 
 .menu button {
   all: unset;
-  cursor: pointer; 
+  cursor: pointer;
   padding: 0;
   border: none;
   display: inline-block;
@@ -69,14 +69,13 @@ body {
 .navContainer {
   width: 100dvw;
   background-color: var(--color-neutral, green);
-
 }
 
 nav {
   width: 100%;
   font-size: 1.5rem;
   display: flex;
-  
+
   align-items: center;
   justify-content: space-between;
   height: 3em;
@@ -84,7 +83,8 @@ nav {
 
 nav #logo {
   width: 2em;
-  filter: invert(100%) sepia(0%) saturate(7492%) hue-rotate(296deg) brightness(96%) contrast(100%);
+  filter: invert(100%) sepia(0%) saturate(7492%) hue-rotate(296deg)
+    brightness(96%) contrast(100%);
 }
 
 .navItem {
@@ -97,8 +97,6 @@ nav #logo {
 .navItem:hover {
   color: var(--dark-green, green);
 }
-
-
 
 header p {
   animation-name: green-mix;
@@ -128,11 +126,11 @@ header {
 }
 
 span.spacer:first-child {
-  flex: 1 1 30% ;
+  flex: 1 1 30%;
 }
 
 span.spacer:last-child {
-  flex: 1 1 70% ;
+  flex: 1 1 70%;
 }
 
 footer {
@@ -187,11 +185,11 @@ h2 {
   font-size: 1rem;
   color: white;
   margin: 0 1rem 2rem 0;
-  padding: .5em;
+  padding: 0.5em;
   width: 15dvw;
   border-radius: 10px;
   border: none;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
   background-color: var(--highlight-green);
 }
 
@@ -270,12 +268,12 @@ input {
   height: 1.5rem;
   font-size: 1.15rem;
   border-radius: 10px;
-  padding: .25rem;
+  padding: 0.25rem;
 }
 
 textarea {
   border-radius: 10px;
-  padding: .5rem;
+  padding: 0.5rem;
   border: 2px solid var(--color-fg);
 }
 
@@ -328,7 +326,6 @@ output[name="error"] {
 
 /* Responsive Styles */
 @media (max-width: 768px) {
-
   nav {
     width: 97%;
   }
@@ -369,7 +366,7 @@ output[name="error"] {
   }
 
   .menu a {
-    padding: .5rem;
+    padding: 0.5rem;
     display: block;
     text-align: center;
     font-size: x-large;
@@ -390,6 +387,6 @@ output[name="error"] {
 
   .contactLogo {
     width: 5em;
-    padding: .5rem;
+    padding: 0.5rem;
   }
 }
